--- a/assets/styles/responsiveness.scss
+++ b/assets/styles/responsiveness.scss
@@ -1,4 +1,5 @@
 $breakpoints: (
+  'xs': 375px,
   'small': 767px,
   'medium': 992px,
   'large': 1220px,
@@ -25,7 +26,7 @@ $breakpoints: (
   }
 }
 
-section {
+.container {
   margin: 0 23px;
   max-width: 100%;
 	@include respond-to('small') {
