--- a/assets/styles/responsive.scss
+++ b/assets/styles/responsive.scss
@@ -1,11 +1,17 @@
 $breakpoints: (
-	'xs': '320px',
-	'sm': '768px',
-	'md': '1024px',
-	'lg': '1440px',
-	'xl': '1920px',
+  'xs': 320px,
+  'sm': 768px,
+  'md': 1024px,
+  'lg': 1440px,
+  'xl': 1920px,
 );
 
 @mixin respond($breakpoint) {
-	
+  @each $_breakpont, $resolution in $breakpoints {
+    @if $_breakpont == $breakpoint {
+      @media screen and (min-width: #{$_breakpont}) {
+        @content
+      }
+    }
+  }
 }
