--- a/assets/styles/responsive.scss
+++ b/assets/styles/responsive.scss
@@ -6,12 +6,18 @@ $breakpoints: (
   'xl': 1920px,
 );
 
-@mixin respond($breakpoint) {
-  @each $_breakpont, $resolution in $breakpoints {
-    @if $_breakpont == $breakpoint {
-      @media screen and (min-width: #{$_breakpont}) {
-        @content
-      }
+@mixin respond-to($breakpoint) {
+  // If the key exists in the map
+  @if map-has-key($breakpoints, $breakpoint) {
+    // Prints a media query based on the value
+    @media (min-width: map-get($breakpoints, $breakpoint)) {
+      @content;
     }
+  }
+
+  // If the key doesn't exist in the map
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+        + "Available breakpoints are: #{map-keys($breakpoints)}.";
   }
 }
