--- a/assets/styles/responsive.scss
+++ b/assets/styles/responsive.scss
@@ -6,6 +6,10 @@ $breakpoints: (
   'xl': 1920px,
 );
 
+/// Mixin to manage responsive breakpoints
+/// @author Kitty Giraudel
+/// @param {String} $breakpoint - Breakpoint name
+/// @require $breakpoints
 @mixin respond-to($breakpoint) {
   // If the key exists in the map
   @if map-has-key($breakpoints, $breakpoint) {
