--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -2,10 +2,13 @@
 @import 'variables';
 @import 'responsive';
 
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
+html,
+body {
+ * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    border: none;
+  }
 }
