--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -4,11 +4,13 @@
 
 html,
 body {
- * {
+  * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     text-decoration: none;
-    border: none;
   }
+}
+button, fieldset {
+  border: none;
 }
