--- a/assets/styles/responsive.scss
+++ b/assets/styles/responsive.scss
@@ -1,10 +1,4 @@
-$breakpoints: (
-  'xs': 320px,
-  'sm': 768px,
-  'md': 1024px,
-  'lg': 1440px,
-  'xl': 1920px,
-);
+@import 'variables';
 
 /// Mixin to manage responsive breakpoints
 /// @author Kitty Giraudel
