--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,3 +3,12 @@ $primary-2: #29105E;
 $secondary: #6A7798;
 $white: #fff;
 $light-grey: #D5DAE6;
+$font-main: 'Montserrat', sans-serif;
+
+$breakpoints: (
+  'xs': 320px,
+  'sm': 768px,
+  'md': 1024px,
+  'lg': 1440px,
+  'xl': 1920px,
+);
